crates/chapbook-ffi/include/chapbook.h

typedef enum cb_status cb_status;
typedef int32_t cb_status;
/**
 * An open library. Opaque.
 *
 * Movable between threads, never used from two at once — the same rule
 * as [`cb_session`], and for a stricter reason: the SQLite connection
 * underneath is not shareable at all.
 */
typedef struct cb_library cb_library;
/**
 * An open book. Opaque.
 */
typedef struct cb_session cb_session;
/**
 * One query's rows, held still until freed. Opaque.
 */
typedef struct cb_shelf cb_shelf;
/**
 * One collection: a named set of books.
 */
typedef struct cb_collection {
    int64_t id;
    int64_t added_at;
    /**
     * How many books are in it. A list of shelf names that does not say
     * how many books are on each is a list of words.
     */
    size_t books;
} cb_collection;
/**
 * One row's series. `CB_ERR_UNAVAILABLE` for a book in none, which is
 * most of them and is not a failure.
 */
cb_status cb_shelf_series(const struct cb_shelf *shelf,
                          size_t index,
                          char *buf,
                          size_t cap,
                          size_t *needed);
/**
 * One row's language tag. `CB_ERR_UNAVAILABLE` if the book declares none.
 */
cb_status cb_shelf_language(const struct cb_shelf *shelf,
                            size_t index,
                            char *buf,
                            size_t cap,
                            size_t *needed);
/**
 * One row's publication identifier — an ISBN, a UUID, whatever the book
 * declared. `CB_ERR_UNAVAILABLE` if it declared none.
 */
cb_status cb_shelf_identifier(const struct cb_shelf *shelf,
                              size_t index,
                              char *buf,
                              size_t cap,
                              size_t *needed);
/**
 * One row's edition fingerprint: the SHA-1 of the file's bytes, hex.
 *
 * The key a host maps its own handle to — an Android `content://` grant,
 * an iOS security-scoped bookmark — because it is what identifies the
 * *file* across a reinstall, while the id identifies the reader's
 * history of it.
 */
cb_status cb_shelf_fingerprint(const struct cb_shelf *shelf,
                               size_t index,
                               char *buf,
                               size_t cap,
                               size_t *needed);
/**
 * The library's own copy of the file.
 *
 * Empty for an *adopted* book — one the library holds a record of and no
 * copy of, because the platform owns the file and the host owns the
 * means of reaching it again. An empty answer is `CB_OK`: the row is
 * fine and the host is the one that knows how to open it.
 */
cb_status cb_shelf_file_path(const struct cb_shelf *shelf,
                             size_t index,
                             char *buf,
                             size_t cap,
                             size_t *needed);
/**
 * The cover image on disk, kept at import so a shelf need not reopen
 * every book to draw one. `CB_ERR_UNAVAILABLE` when `has_cover` is
 * false.
 */
cb_status cb_shelf_cover_path(const struct cb_shelf *shelf,
                              size_t index,
                              char *buf,
                              size_t cap,
                              size_t *needed);
/**
 * The id of one collection this row is in, by index within the row.
 */
cb_status cb_shelf_collection_id(const struct cb_shelf *shelf,
                                 size_t index,
                                 size_t which,
                                 int64_t *id);
/**
 * The name of one collection this row is in, by the same index.
 */
cb_status cb_shelf_collection_name(const struct cb_shelf *shelf,
                                   size_t index,
                                   size_t which,
                                   char *buf,
                                   size_t cap,
                                   size_t *needed);
/**
 * Take a book off the shelf.
 *
 * Soft: the row keeps its id, its annotations and its position, so
 * adding the same file back is the same book with its marks intact.
 */
cb_status cb_library_delete_book(struct cb_library *library, int64_t book);
/**
 * Mark a book finished, or take the mark back.
 *
 * A session records this itself when the reader reaches the end, so a
 * host needs it for the other direction: the "mark as read" a reader
 * taps on a book they finished elsewhere, and the undo. Marking twice
 * keeps the first timestamp.
 */
cb_status cb_library_set_finished(struct cb_library *library, int64_t book, bool finished);
/**
 * The library row the open session is reading.
 *
 * The join between the reading view and the shelf: a session *imports*
 * the book it opens, so this is how a host learns which row that became
 * — to record where it syncs to, or to find it again in a query.
 *
 * `CB_ERR_UNAVAILABLE` for a book that never reached the library: an
 * OPDS page stream, or a session built without one.
 */
cb_status cb_session_book_id(const struct cb_session *session, int64_t *book);
/**
 * Every collection, oldest first, into a caller-allocated array.
 *
 * The same two-call idiom as the string accessors: ask with a zero
 * capacity to learn the count, allocate, ask again.
 */
cb_status cb_library_collections(const struct cb_library *library,
                                 struct cb_collection *buf,
                                 size_t cap,
                                 size_t *needed);
/**
 * One collection's name, by id. `CB_ERR_UNAVAILABLE` if no live
 * collection has that id.
 */
cb_status cb_library_collection_name(const struct cb_library *library,
                                     int64_t collection,
                                     char *buf,
                                     size_t cap,
                                     size_t *needed);
/**
 * Make a collection, or return the one that already has this name.
 *
 * Idempotent on the name: a host putting a book on "Sci-Fi" should not
 * have to ask first whether "Sci-Fi" exists.
 */
cb_status cb_library_create_collection(struct cb_library *library, const char *name, int64_t *id);
/**
 * Rename a collection.
 */
cb_status cb_library_rename_collection(struct cb_library *library,
                                       int64_t collection,
                                       const char *name);
/**
 * Delete a collection. The books stay; only the grouping goes, and the
 * name becomes available again.
 */
cb_status cb_library_delete_collection(struct cb_library *library, int64_t collection);
/**
 * Put a book in a collection. Doing it twice is not an error.
 */
cb_status cb_library_add_to_collection(struct cb_library *library,
                                       int64_t book,
                                       int64_t collection);
/**
 * Take a book out of a collection. Doing it twice is not an error.
 */
cb_status cb_library_remove_from_collection(struct cb_library *library,
                                            int64_t book,
                                            int64_t collection);