windows/Chapbook/Interop.cs


    [LibraryImport(Library)]
    internal static partial Status cb_shelf_series(
        nint shelf, nuint index, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_shelf_language(
        nint shelf, nuint index, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_shelf_identifier(
        nint shelf, nuint index, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_shelf_fingerprint(
        nint shelf, nuint index, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_shelf_file_path(
        nint shelf, nuint index, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_shelf_cover_path(
        nint shelf, nuint index, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_shelf_collection_id(
        nint shelf, nuint index, nuint slot, out long id);

    [LibraryImport(Library)]
    internal static partial Status cb_shelf_collection_name(
        nint shelf, nuint index, nuint slot, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_library_delete_book(nint library, long book);

    [LibraryImport(Library)]
    internal static partial Status cb_library_set_finished(
        nint library, long book, byte finished);

    [LibraryImport(Library)]
    internal static partial Status cb_session_book_id(nint session, out long book);

    [LibraryImport(Library)]
    internal static partial Status cb_library_collections(
        nint library, NativeCollection[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library)]
    internal static partial Status cb_library_collection_name(
        nint library, long collection, byte[]? buf, nuint cap, out nuint needed);

    [LibraryImport(Library, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial Status cb_library_create_collection(
        nint library, string name, out long id);

    [LibraryImport(Library, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial Status cb_library_rename_collection(
        nint library, long collection, string name);

    [LibraryImport(Library)]
    internal static partial Status cb_library_delete_collection(nint library, long collection);

    [LibraryImport(Library)]
    internal static partial Status cb_library_add_to_collection(
        nint library, long book, long collection);

    [LibraryImport(Library)]
    internal static partial Status cb_library_remove_from_collection(
        nint library, long book, long collection);
}
